[gd_scene load_steps=6 format=3 uid="uid://cqlobr8nugp03"]

[ext_resource type="Script" path="res://scripts/option_screen.gd" id="1_1ofs6"]
[ext_resource type="FontFile" uid="uid://0jrk3kh3t8wc" path="res://fonts/RuthlessSketch-q2xD6.ttf" id="1_lvyc4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0roqk"]
bg_color = Color(0.372549, 0.498039, 0.305882, 1)
border_color = Color(0.903598, 0.903598, 0.903598, 1)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_pchte"]
font = ExtResource("1_lvyc4")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5hux5"]
font = ExtResource("1_lvyc4")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="OptionScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ofs6")

[node name="Panel" type="Panel" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0roqk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 35

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_pchte")
horizontal_alignment = 1

[node name="List" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="SFX" type="HBoxContainer" parent="Panel/VBoxContainer/List"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/List/SFX"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound Effect"
label_settings = SubResource("LabelSettings_5hux5")

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer/List/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1

[node name="BGM" type="HBoxContainer" parent="Panel/VBoxContainer/List"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/List/BGM"]
layout_mode = 2
size_flags_horizontal = 3
text = "BGM"
label_settings = SubResource("LabelSettings_5hux5")

[node name="BGMSlider" type="HSlider" parent="Panel/VBoxContainer/List/BGM"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1

[node name="Buttons" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Back" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lvyc4")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lvyc4")
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="drag_ended" from="Panel/VBoxContainer/List/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="drag_ended" from="Panel/VBoxContainer/List/BGM/BGMSlider" to="." method="_on_bgm_slider_drag_ended"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Buttons/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Back" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Buttons/MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
